# libBICOS

./: meson.build  meson.options
bench/: cuda.cu
data/: Q.cvstore
include/: common.hpp
include/impl/cpu/: bicos.hpp
include/impl/cuda/: agree.cuh
src/: fileutils.cpp
src/impl/: cuda.cu
test/: agree.cu  agree_subpixel_smem.cu
